 * cli: Add JMX authentication support (CASSANDRA-5080)
 * nodetool: ability to repair specific range (CASSANDRA-5280)
 * Fix possible assertion triggered in SliceFromReadCommand (CASSANDRA-5284)
 * cqlsh: Add inet type support on Windows (ipv4-only) (CASSANDRA-4801)
 * Fix race when initializing ColumnFamilyStore (CASSANDRA-5350)
 * Add UseTLAB JVM flag (CASSANDRA-5361)


1.1.10
 * fix saved key cache not loading at startup (CASSANDRA-5166)
 * fix ConcurrentModificationException in getBootstrapSource (CASSANDRA-5170)
 * fix sstable maxtimestamp for row deletes and pre-1.1.1 sstables (CASSANDRA-5153)
 * fix start key/end token validation for wide row iteration (CASSANDRA-5168)
 * add ConfigHelper support for Thrift frame and max message sizes (CASSANDRA-5188)
 * fix nodetool repair not fail on node down (CASSANDRA-5203)
 * always collect tombstone hints (CASSANDRA-5068)
 * Fix thread growth on node removal (CASSANDRA-5175)
 * Fix error when sourcing file in cqlsh (CASSANDRA-5235)
 * Make Ec2Region's datacenter name configurable (CASSANDRA-5155)


1.1.9
 * Simplify CompressedRandomAccessReader to work around JDK FD bug (CASSANDRA-5088)
 * Improve handling a changing target throttle rate mid-compaction (CASSANDRA-5087)
 * fix multithreaded compaction deadlock (CASSANDRA-4492)
 * fix specifying and altering crc_check_chance (CASSANDRA-5053)
 * Don't expire columns sooner than they should in 2ndary indexes (CASSANDRA-5079)
 * Pig: correctly decode row keys in widerow mode (CASSANDRA-5098)
 * nodetool repair command now prints progress (CASSANDRA-4767)
 * fix user defined compaction to run against 1.1 data directory (CASSANDRA-5118)
 * Fix CQL3 BATCH authorization caching (CASSANDRA-5145)
 * fix get_count returns incorrect value with TTL (CASSANDRA-5099)
 * better handling for amid compaction failure (CASSANDRA-5137)
 * calculate pending ranges asynchronously (CASSANDRA-5135)
 * convert default marshallers list to map for better readability (CASSANDRA-5109)


1.1.8